@@ -69,7 +69,7 @@ if ($auto_create_special && !isset($auto_create_done)) {
     $autocreate = array($sent_folder, $trash_folder, $draft_folder);
     $folders_created = false;
     foreach( $autocreate as $folder ) {
-        if (($folder != '') && ($folder != 'none')) {
+        if ($folder != '') {
             /**
              * If $show_only_subscribed_folders is true, don't use 
              * $mailboxes array for checking if mailbox exists.
